# pygi

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/pygi/: app.py  dashboard.py  helpers.py  physics.py
src/pygi/pages/: 1_converters.py  2_gaussians.py
tests/: test_physics.py
