[project]
name = "pygi"
version = "0.1.0"
description = ""
authors = [
    {name = "jrphysics",email = "jrphysics@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pygi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
